--- a/my-project/src/Components/Shop/Gadgets/Gadgets.css
+++ b/my-project/src/Components/Shop/Gadgets/Gadgets.css
@@ -1,450 +1,43 @@
-
-#gadgets1{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 3cm;
-    border-radius: 15px;
-}
-#gadgets1>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets1>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets1>p{
-    margin-left: 6cm;
+.gadget-page-container {
+  margin: 0 2rem;
 }
 
-#gadgets1>#details1{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets1>#cart1{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.gadget-page-item {
+  display: flex;
+  background-color: rgb(255, 173, 141);
+  border-radius: 15px;
+  padding: 0 10px;
+  margin-bottom: 1rem;
 }
 
-
-
-
-
-#gadgets2{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 9cm;
-    border-radius: 15px;
-}
-#gadgets2>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets2>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets2>p{
-    margin-left: 6cm;
+.gadget-page-item > img {
+  width: 8rem;
+  height: 8rem;
+  object-fit: cover;
+  margin: 10px 0;
 }
 
-#gadgets2>#details2{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets2>#cart2{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.gadget-page-item > .gadget-page-item-detail {
+  flex: 1;
+  margin: 0 2rem;
 }
 
-
-
-
-
-
-#gadgets3{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 15cm;
-    border-radius: 15px;
-}
-#gadgets3>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets3>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets3>p{
-    margin-left: 6cm;
+.gadget-page-item > .gadget-page-item-detail > pre {
+  font-family: inherit;
 }
 
-#gadgets3>#details3{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets3>#cart3{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.gadget-page-item > .gadget-page-button-container {
+  display: flex;
+  align-items: center;
+  width: 10rem;
 }
 
-
-
-
-
-#gadgets4{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 21cm;
-    border-radius: 15px;
+.gadget-page-item
+  > .gadget-page-button-container
+  > .wrap-gadget-page-button-container
+  > button {
+  background-color: blanchedalmond;
+  border-radius: 10px;
+  border: 0px;
+  padding: 10px;
 }
-#gadgets4>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets4>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets4>p{
-    margin-left: 6cm;
-}
-
-#gadgets4>#details4{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets4>#cart4{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-
-#gadgets5{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 27cm;
-    border-radius: 15px;
-}
-#gadgets5>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets5>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets5>p{
-    margin-left: 6cm;
-}
-
-#gadgets5>#details5{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets5>#cart5{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-
-#gadgets6{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 33cm;
-    border-radius: 15px;
-}
-#gadgets6>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets6>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets6>p{
-    margin-left: 6cm;
-}
-
-#gadgets6>#details6{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets6>#cart6{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-#gadgets7{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 39cm;
-    border-radius: 15px;
-}
-#gadgets7>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets7>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets7>p{
-    margin-left: 6cm;
-}
-
-#gadgets7>#details7{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets7>#cart7{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-#gadgets8{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 45cm;
-    border-radius: 15px;
-}
-#gadgets8>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets8>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets8>p{
-    margin-left: 6cm;
-}
-
-#gadgets8>#details8{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets8>#cart8{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-#gadgets9{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 51cm;
-    border-radius: 15px;
-}
-#gadgets9>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets9>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets9>p{
-    margin-left: 6cm;
-}
-
-#gadgets9>#details9{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets9>#cart9{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-#gadgets10{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 57cm;
-    border-radius: 15px;
-}
-#gadgets10>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#gadgets10>h1{
-   
-    margin-left: 6cm;
-}
-#gadgets10>p{
-    margin-left: 6cm;
-}
-
-#gadgets10>#details10{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#gadgets10>#cart10{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-#gadgets{
-    position: absolute;
-    margin-top: 1cm;
-    margin-left: 6cm;
-}
-
