--- a/my-project/src/Components/Shop/Menclothes/MenClothes.css
+++ b/my-project/src/Components/Shop/Menclothes/MenClothes.css
@@ -1,435 +1,43 @@
-#menclothes1 {
-  width: 30cm;
-  height: 5cm;
+.men-clothes-page-container {
+  margin: 0 2rem;
+}
+
+.men-clothes-page-item {
+  display: flex;
   background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 3cm;
   border-radius: 15px;
+  padding: 0 10px;
+  margin-bottom: 1rem;
 }
 
-#menclothes1 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
+.men-clothes-page-item > img {
+  width: 8rem;
+  height: 8rem;
+  object-fit: cover;
+  margin: 10px 0;
 }
 
-#menclothes1 > h1 {
-  margin-left: 6cm;
+.men-clothes-page-item > .men-clothes-page-item-detail {
+  flex: 1;
+  margin: 0 2rem;
 }
 
-#menclothes1 > p {
-  margin-left: 6cm;
+.men-clothes-page-item > .men-clothes-page-item-detail > pre {
+  font-family: inherit;
 }
 
-#menclothes1 > #details1 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
+.men-clothes-page-item > .men-clothes-page-button-container {
+  display: flex;
+  align-items: center;
+  width: 10rem;
 }
 
-#menclothes1 > #cart1 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
+.men-clothes-page-item
+  > .men-clothes-page-button-container
+  > .wrap-men-clothes-page-button-container
+  > button {
   background-color: blanchedalmond;
-  padding: 0.2cm;
   border-radius: 10px;
-}
-
-#menclothes2 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 9cm;
-  border-radius: 15px;
-}
-
-#menclothes2 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes2 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes2 > p {
-  margin-left: 6cm;
-}
-
-#menclothes2 > #details2 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes2 > #cart2 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes3 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 15cm;
-  border-radius: 15px;
-}
-
-#menclothes3 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes3 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes3 > p {
-  margin-left: 6cm;
-}
-
-#menclothes3 > #details3 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes3 > #cart3 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes4 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 21cm;
-  border-radius: 15px;
-}
-
-#menclothes4 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes4 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes4 > p {
-  margin-left: 6cm;
-}
-
-#menclothes4 > #details4 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes4 > #cart4 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes5 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 27cm;
-  border-radius: 15px;
-}
-
-#menclothes5 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes5 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes5 > p {
-  margin-left: 6cm;
-}
-
-#menclothes5 > #details5 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes5 > #cart5 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes6 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 33cm;
-  border-radius: 15px;
-}
-
-#menclothes6 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes6 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes6 > p {
-  margin-left: 6cm;
-}
-
-#menclothes6 > #details6 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes6 > #cart6 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes7 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 39cm;
-  border-radius: 15px;
-}
-
-#menclothes7 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes7 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes7 > p {
-  margin-left: 6cm;
-}
-
-#menclothes7 > #details7 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes7 > #cart7 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes8 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 45cm;
-  border-radius: 15px;
-}
-
-#menclothes8 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes8 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes8 > p {
-  margin-left: 6cm;
-}
-
-#menclothes8 > #details8 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes8 > #cart8 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes9 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 51cm;
-  border-radius: 15px;
-}
-
-#menclothes9 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes9 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes9 > p {
-  margin-left: 6cm;
-}
-
-#menclothes9 > #details9 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes9 > #cart9 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes10 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 57cm;
-  border-radius: 15px;
-}
-
-#menclothes10 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#menclothes10 > h1 {
-  margin-left: 6cm;
-}
-
-#menclothes10 > p {
-  margin-left: 6cm;
-}
-
-#menclothes10 > #details10 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#menclothes10 > #cart10 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#menclothes {
-  position: absolute;
-  margin-top: 1cm;
-  margin-left: 6cm;
+  border: 0px;
+  padding: 10px;
 }
