--- a/my-project/src/Components/Shop/Snacks/Snacks.css
+++ b/my-project/src/Components/Shop/Snacks/Snacks.css
@@ -1,449 +1,43 @@
-
-#snacks1{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 3cm;
-    border-radius: 15px;
-}
-#snacks1>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks1>h1{
-   
-    margin-left: 6cm;
-}
-#snacks1>p{
-    margin-left: 6cm;
+.snack-page-container {
+  margin: 0 2rem;
 }
 
-#snacks1>#details1{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks1>#cart1{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.snack-page-item {
+  display: flex;
+  background-color: rgb(255, 173, 141);
+  border-radius: 15px;
+  padding: 0 10px;
+  margin-bottom: 1rem;
 }
 
-
-
-
-
-#snacks2{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 9cm;
-    border-radius: 15px;
-}
-#snacks2>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks2>h1{
-   
-    margin-left: 6cm;
-}
-#snacks2>p{
-    margin-left: 6cm;
+.snack-page-item > img {
+  width: 8rem;
+  height: 8rem;
+  object-fit: cover;
+  margin: 10px 0;
 }
 
-#snacks2>#details2{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks2>#cart2{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.snack-page-item > .snack-page-item-detail {
+  flex: 1;
+  margin: 0 2rem;
 }
 
-
-
-
-
-
-#snacks3{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 15cm;
-    border-radius: 15px;
-}
-#snacks3>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks3>h1{
-   
-    margin-left: 6cm;
-}
-#snacks3>p{
-    margin-left: 6cm;
+.snack-page-item > .snack-page-item-detail > pre {
+  font-family: inherit;
 }
 
-#snacks3>#details3{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks3>#cart3{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
+.snack-page-item > .snack-page-button-container {
+  display: flex;
+  align-items: center;
+  width: 10rem;
 }
 
-
-
-
-
-#snacks4{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 21cm;
-    border-radius: 15px;
-}
-#snacks4>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks4>h1{
-   
-    margin-left: 6cm;
-}
-#snacks4>p{
-    margin-left: 6cm;
-}
-
-#snacks4>#details4{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks4>#cart4{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-
-#snacks5{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 27cm;
-    border-radius: 15px;
-}
-#snacks5>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks5>h1{
-   
-    margin-left: 6cm;
-}
-#snacks5>p{
-    margin-left: 6cm;
-}
-
-#snacks5>#details5{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks5>#cart5{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-
-#snacks6{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 33cm;
-    border-radius: 15px;
-}
-#snacks6>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks6>h1{
-   
-    margin-left: 6cm;
-}
-#snacks6>p{
-    margin-left: 6cm;
-}
-
-#snacks6>#details6{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks6>#cart6{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-#snacks7{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 39cm;
-    border-radius: 15px;
-}
-#snacks7>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks7>h1{
-   
-    margin-left: 6cm;
-}
-#snacks7>p{
-    margin-left: 6cm;
-}
-
-#snacks7>#details7{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks7>#cart7{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-#snacks8{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 45cm;
-    border-radius: 15px;
-}
-#snacks8>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks8>h1{
-   
-    margin-left: 6cm;
-}
-#snacks8>p{
-    margin-left: 6cm;
-}
-
-#snacks8>#details8{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks8>#cart8{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-
-
-#snacks9{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 51cm;
-    border-radius: 15px;
-}
-#snacks9>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks9>h1{
-   
-    margin-left: 6cm;
-}
-#snacks9>p{
-    margin-left: 6cm;
-}
-
-#snacks9>#details9{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks9>#cart9{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-#snacks10{
-    width: 30cm;
-    height: 5cm;
-    background-color: rgb(255,173,141);
-    position:absolute;
-    margin-left: 5cm;
-    margin-top: 57cm;
-    border-radius: 15px;
-}
-#snacks10>img{
-    width: 3cm;
-    height: 4cm;
-    position: absolute;
-    margin-left: 2cm;
-    margin-top: 0.5cm;
-}
-#snacks10>h1{
-   
-    margin-left: 6cm;
-}
-#snacks10>p{
-    margin-left: 6cm;
-}
-
-#snacks10>#details10{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 6cm;
-    margin-top: 0.2cm;
-    
-}
-#snacks10>#cart10{
-    text-decoration: none;
-    position: absolute;
-    margin-left: 24.5cm;
-    margin-top: -1cm;
-    background-color: blanchedalmond;
-    padding: 0.2cm;
-    border-radius:10px;
-    
-}
-
-#snacks{
-    position: absolute;
-    margin-top: 1cm;
-    margin-left: 6cm;
+.snack-page-item
+  > .snack-page-button-container
+  > .wrap-snack-page-button-container
+  > button {
+  background-color: blanchedalmond;
+  border-radius: 10px;
+  border: 0px;
+  padding: 10px;
 }
