--- a/my-project/src/Components/Shop/WomenClothes/WomenClothes.css
+++ b/my-project/src/Components/Shop/WomenClothes/WomenClothes.css
@@ -1,435 +1,43 @@
-#womenclothes1 {
-  width: 30cm;
-  height: 5cm;
+.women-clothes-page-container {
+  margin: 0 2rem;
+}
+
+.women-clothes-page-item {
+  display: flex;
   background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 3cm;
   border-radius: 15px;
+  padding: 0 10px;
+  margin-bottom: 1rem;
 }
 
-#womenclothes1 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
+.women-clothes-page-item > img {
+  width: 8rem;
+  height: 8rem;
+  object-fit: cover;
+  margin: 10px 0;
 }
 
-#womenclothes1 > h1 {
-  margin-left: 6cm;
+.women-clothes-page-item > .women-clothes-page-item-detail {
+  flex: 1;
+  margin: 0 2rem;
 }
 
-#womenclothes1 > p {
-  margin-left: 6cm;
+.women-clothes-page-item > .women-clothes-page-item-detail > pre {
+  font-family: inherit;
 }
 
-#womenclothes1 > #details1 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
+.women-clothes-page-item > .women-clothes-page-button-container {
+  display: flex;
+  align-items: center;
+  width: 10rem;
 }
 
-#womenclothes1 > #cart1 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
+.women-clothes-page-item
+  > .women-clothes-page-button-container
+  > .wrap-women-clothes-page-button-container
+  > button {
   background-color: blanchedalmond;
-  padding: 0.2cm;
   border-radius: 10px;
-}
-
-#womenclothes2 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 9cm;
-  border-radius: 15px;
-}
-
-#womenclothes2 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes2 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes2 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes2 > #details2 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes2 > #cart2 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes3 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 15cm;
-  border-radius: 15px;
-}
-
-#womenclothes3 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes3 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes3 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes3 > #details3 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes3 > #cart3 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes4 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 21cm;
-  border-radius: 15px;
-}
-
-#womenclothes4 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes4 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes4 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes4 > #details4 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes4 > #cart4 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes5 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 27cm;
-  border-radius: 15px;
-}
-
-#womenclothes5 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes5 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes5 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes5 > #details5 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes5 > #cart5 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes6 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 33cm;
-  border-radius: 15px;
-}
-
-#womenclothes6 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes6 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes6 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes6 > #details6 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes6 > #cart6 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes7 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 39cm;
-  border-radius: 15px;
-}
-
-#womenclothes7 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes7 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes7 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes7 > #details7 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes7 > #cart7 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes8 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 45cm;
-  border-radius: 15px;
-}
-
-#womenclothes8 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes8 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes8 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes8 > #details8 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes8 > #cart8 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes9 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 51cm;
-  border-radius: 15px;
-}
-
-#womenclothes9 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes9 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes9 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes9 > #details9 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes9 > #cart9 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes10 {
-  width: 30cm;
-  height: 5cm;
-  background-color: rgb(255, 173, 141);
-  position: absolute;
-  margin-left: 5cm;
-  margin-top: 57cm;
-  border-radius: 15px;
-}
-
-#womenclothes10 > img {
-  width: 3cm;
-  height: 4cm;
-  position: absolute;
-  margin-left: 2cm;
-  margin-top: 0.5cm;
-}
-
-#womenclothes10 > h1 {
-  margin-left: 6cm;
-}
-
-#womenclothes10 > p {
-  margin-left: 6cm;
-}
-
-#womenclothes10 > #details10 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 6cm;
-  margin-top: 0.2cm;
-}
-
-#womenclothes10 > #cart10 {
-  text-decoration: none;
-  position: absolute;
-  margin-left: 24.5cm;
-  margin-top: -1cm;
-  background-color: blanchedalmond;
-  padding: 0.2cm;
-  border-radius: 10px;
-}
-
-#womenclothes {
-  position: absolute;
-  margin-top: 1cm;
-  margin-left: 6cm;
+  border: 0px;
+  padding: 10px;
 }
