--- a/my-project/src/Components/Cart/Cart.css
+++ b/my-project/src/Components/Cart/Cart.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem 1.5rem;
-  background-color: white;
+  background-color: whitesmoke;
   border-radius: 10px;
   margin-top: 4rem;
 }
@@ -33,6 +33,11 @@
 .page-summary-details {
   display: flex;
   justify-content: space-between;
+  
+}
+.page-summary-details>span {
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .page-summary-pay-button {
@@ -42,7 +47,7 @@
   border-radius: 10px;
   border: 0;
   background-color: green;
-  color: white;
+  color: whitesmoke;
   cursor: pointer;
 }
 
