--- a/my-project/src/Components/Shop/shop.css
+++ b/my-project/src/Components/Shop/shop.css
@@ -15,6 +15,7 @@ html {
 
 .container > .header > .logo {
   margin: 0;
+  margin-right: 1cm;
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -40,7 +41,7 @@ html {
 }
 
 .container > .header > div > .search > input {
-  width: 100%;
+  width: 97%;
   height: 100%;
   background-color: blanchedalmond;
   border: none;
@@ -143,10 +144,12 @@ html {
 }
 
 .container > .content > .categories > h2,
-.container > .content > .categories > .cat-list > a {
+.container > .content > .categories > .cat-list > a
+ {
   margin: 0;
   padding: 0.25rem 1rem;
   text-decoration: none;
+  
 }
 
 .user-container {
